create form letter with jquery

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,303 @@
+/* begin akzidenz condensed */
+@font-face {
+  font-family: 'akzidenz-grotesk-condensed';
+  src : url('../fonts/akzidenzBertCn/AkzidGroBELigCn.eot');
+  src : url('../fonts/akzidenzBertCn/AkzidGroBELigCn.eot?#iefix') format('eot'),
+        url('../fonts/akzidenzBertCn/AkzidGroBELigCn.woff2') format('woff2'),
+        url('../fonts/akzidenzBertCn/AkzidGroBELigCn.woff') format('woff'),
+        url('../fonts/akzidenzBertCn/AkzidGroBELigCn.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'akzidenz-grotesk-condensed';
+  src : url('../fonts/akzidenzBertCn/AkzidGroBECn.eot');
+  src : url('../fonts/akzidenzBertCn/AkzidGroBECn.eot?#iefix') format('eot'),
+        url('../fonts/akzidenzBertCn/AkzidGroBECn.woff2') format('woff2'),
+        url('../fonts/akzidenzBertCn/AkzidGroBECn.woff') format('woff'),
+        url('../fonts/akzidenzBertCn/AkzidGroBECn.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'akzidenz-grotesk-condensed';
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEMdCn.eot');
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEMdCn.eot?#iefix') format('eot'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEMdCn.woff2') format('woff2'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEMdCn.woff') format('woff'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEMdCn.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'akzidenz-grotesk-condensed';
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEMdCnIt.eot');
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEMdCn.eot?#iefix') format('eot'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEMdCnIt.woff2') format('woff2'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEMdCnIt.woff') format('woff'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEMdCnIt.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'akzidenz-grotesk-condensed';
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEBolCn.eot');
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEBolCn.eot?#iefix') format('eot'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEBolCn.woff2') format('woff2'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEBolCn.woff') format('woff'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEBolCn.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'akzidenz-grotesk-condensed';
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEXBdCn.eot');
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEXBdCn.eot?#iefix') format('eot'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEXBdCn.woff2') format('woff2'),        url('../fonts/akzidenzBertCn/AkzidGroBEXBdCn.woff') format('woff'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEXBdCn.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'akzidenz-grotesk-condensed';
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEXBdCnIt.eot');
+  src : url('../fonts/akzidenzBertCn/AkzidGroBEXBdCnIt.eot?#iefix') format('eot'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEXBdCnIt.woff2') format('woff2'),        url('../fonts/akzidenzBertCn/AkzidGroBEXBdCnIt.woff') format('woff'),
+        url('../fonts/akzidenzBertCn/AkzidGroBEXBdCnIt.ttf') format('truetype');
+  font-weight: 800;
+  font-style: italic;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+/*end akzidenz condensed*/
+/* begin Bernhard Modern */
+@font-face {
+  font-family: 'Bernhard Modern';
+  src : url('../fonts/bernhardModern/BernhModBTRom.eot');
+  src : url('../fonts/bernhardModern/BernhModBTRom.eot?#iefix') format('eot'),
+        url('../fonts/bernhardModern/BernhModBTRom.woff2') format('woff2'),
+        url('../fonts/bernhardModern/BernhModBTRom.woff') format('woff'),
+        url('../fonts/bernhardModern/BernhModBTRom.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+/* end Bernhard Modern */
+/* carolynaBlack*/
+@font-face {
+  font-family: 'Carolyna Pro Black';
+  src : url('../fonts/carolynaProBlack/CarolynaProBlack.eot');
+  src : url('../fonts/carolynaProBlack/CarolynaProBlack.eot?#iefix') format('eot'),
+        url('../fonts/carolynaProBlack/CarolynaProBlack.woff2') format('woff2'),
+        url('../fonts/carolynaProBlack/CarolynaProBlack.woff') format('woff'),
+        url('../fonts/carolynaProBlack/CarolynaProBlack.ttf') format('truetype');
+  font-weight: 900; /* Carolyna Pro Black */
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  font-display: swap;
+}
+/* end carolynaBlack */
+
+/* Akzidenz Grotesk Converted */
+.akzidenzLightCon {
+  font-family: 'akzidenz-grotesk-condensed', sans-serif;
+  font-variant: normal;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 300;
+  letter-spacing: .02em;
+  word-spacing: -.01em;
+}
+/*fake no italic for bold,reglight*/
+.akzidenzLightConItalic {
+  font-family: 'akzidenz-grotesk-condensed', sans-serif;
+  font-variant: normal;
+  font-size: 1.25rem;
+  font-style: italic;
+  font-weight: 300;
+  letter-spacing: .05rem;
+  /* word-spacing: -.02em; */
+}
+/* .akzidenzRegCon {
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: .01em;
+}
+.akzidenzRegConItalic {
+  font-style: italic;
+  font-weight: 400;
+  letter-spacing: .01em;
+}
+.akzidenzMedCon {
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: .02em;
+  word-spacing: -.02em;
+}
+.akzidenzMedConItalic {
+  font-style: italic;
+  font-weight: 500;
+  letter-spacing: .01em;
+}
+.akzidenzBoldCon {
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: .03em;
+  word-spacing: -.01em;
+}
+.akzidenzBoldItalic {
+  font-style: italic;
+  font-weight: 700;
+  letter-spacing: .01em;
+}
+.akzidenzBlackCon {
+  font-style: normal;
+  font-weight: 800;
+  letter-spacing: .03em;
+  word-spacing: -.01em;
+}
+.akzidenzBlackConItalic {
+  font-style: italic;
+  font-weight: 800;
+  letter-spacing: .03em;
+  word-spacing: -.01em;
+} */
+/*end akzidenz condensed*/
+
+/* begin Bernhard Modern */
+.bernhardModern {
+  font-family: 'Bernhard Modern', serif;
+  font-variant: normal;
+  font-weight: 500;
+  font-style: serif;
+  font-size: 2rem;
+}
+/* end Bernhard Modern */
+/* CarolynaBlack script handwriting */
+.carolynaBlack {
+  font-family: 'Carolyna Pro Black', serif;
+  font-variant: normal;
+  font-weight: 900;
+  font-style: serif;
+  font-size: 2.5rem;
+}
+/* end CarolynaBlack script handwriting */
+
+/* end @font-face and font styling  */
+
 body {
   background-image: url('../img/backgroundPaper.png');
   background-repeat: no-repeat;
   background-position: top center;
-  border: 1px solid blue;
-}
-.container {
-  border: 1px solid red;
+  background-size: cover;
+  line-height: 2;
 }
 form {
-  border: 1px solid green;
+  width: 100%;
+  height: 100%;
+}
+input[type="text"] {
+  background-color : rgba(255,255,255,0.5);
+}
+select option {
+  background-color: rgba(255,255,255,0.5);
+}
+textarea {
+  background-color: rgba(255,255,255,0.5);
+}
+/* a {
+  display: inline-block;
+  text-decoration: none;
+  color: rgba(102,0,0,1.0);
+  outline: none;
+  text-align: center;
+}
+a:hover {
+  color: rgba(102,0,0,0.5);
+  text-decoration: none;
+} */
+.greeting {
+  color: rgba(102,0,0,1.0);
+  cursor: pointer;
+  text-align: center;
+}
+.greeting:hover{
+  color:rgba(102,0,0,0.5);
+}
+.form-control {
+  background-color: rgba(255,255,255,0.5);
+}
+.form-group {
+  margin-bottom: 32px;
+}
+.letterPositioning {
+  width: 100%;
+  height: 100%;
+  padding-top: 15%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-bottom: 15%;
+}
+
+.btn-danger {
+  color: #fff;
+  background-color: rgba(102,0,0,1.0);
+  border-color: rgba(72,0,0,1.0);
+}
+
+.btn-danger:hover {
+  color: #fff;
+  background-color: rgba(102,0,0,0.5);
+  border-color: rgba(72,0,0,0.5);
+}
+
+/* .btn-danger:focus, .btn-danger.focus {
+  box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
+}
+
+.btn-danger.disabled, .btn-danger:disabled {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.btn-danger:not(:disabled):not(.disabled):active, .btn-danger:not(:disabled):not(.disabled).active,
+.show > .btn-danger.dropdown-toggle {
+  color: #fff;
+  background-color: #bd2130;
+  border-color: #b21f2d;
+}
+
+.btn-danger:not(:disabled):not(.disabled):active:focus, .btn-danger:not(:disabled):not(.disabled).active:focus,
+.show > .btn-danger.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
+} */
+#formLetter {
+  display: none;
+}
+#loveLetter {
+  display: none;
 }
